--- a/sections/main-account.liquid
+++ b/sections/main-account.liquid
@@ -37,9 +37,6 @@
                 {%- if customer.orders.size > 0 -%}
                     <div
                         class="orders-list"
-                        {%- if paginate.pages == 1 -%}
-                            style="margin-bottom: 8.5rem"
-                        {%- endif -%}
                     >
                         {%- for order in customer.orders -%}
                             <div class="orders-list__order">
@@ -121,13 +118,13 @@
                         aria-label="{{ 'general.pagination.label' | t }}"
                     >
                         {%- if paginate.previous -%}
-                            <a href="{{ paginate.previous.url }}" class="button paginate__button--prev">
+                            <a href="{{ paginate.previous.url }}" class="button button--secondary paginate__button--prev">
                                 {{ 'general.pagination.previous' | t }}
                             </a>
                         {%- endif -%}
 
                         {%- if paginate.next -%}
-                            <a href="{{ paginate.next.url }}" class="button paginate__button--next">
+                            <a href="{{ paginate.next.url }}" class="button button--secondary paginate__button--next">
                                 {{ 'general.pagination.next' | t }}
                             </a>
                         {%- endif -%}
