--- a/scss/pages/section-main-search.scss
+++ b/scss/pages/section-main-search.scss
@@ -6,7 +6,7 @@ main-search .spinner {
 }
 
 .template-main-search__loading-state {
-  display: none!important;
+  display: none;
 }
 
 main-search[loading] .template-main-search__loading-state {
@@ -15,10 +15,8 @@ main-search[loading] .template-main-search__loading-state {
   padding: 5rem;
 }
 
-main-search[loading] .template-main-search__result_summary,
-main-search[loading] .template-main-search__wrapper,
 main-search[loading] .tabs-content__wrapper {
-  //display: none;
+  display: none;
 }
 
 .template-main-search {
@@ -65,25 +63,29 @@ main-search[loading] .tabs-content__wrapper {
 }
 
 .template-main-search__wrapper {
-  width: auto;
+  width: 100%;
   margin: 0 auto;
+  display: flex;
 }
 
 .template-main-search__wrapper .tabs {
   display: flex;
-  align-items: start;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin: 25px 0 20px;
-  padding: 0;
-  column-gap: 40px;
-  font-family: var(--america-mono-font);
+  flex-wrap: nowrap;
+    overflow-x: auto;
+  -ms-scroll-snap-type: x mandatory;
+  scroll-snap-type: x mandatory;
+  margin: 25px auto 0;
+  padding: 0 0 15px 0;
+  gap: 30px;
+  align-items: center;
 }
 
 .template-main-search__wrapper .tabs li {
   list-style-type: none;
-  margin-left: 4px;
-  margin-right: 4px;
+  flex: auto;
+  @media screen and (max-width: 470px) {
+    min-width: 25%;
+  }
 }
 
 .template-main-search__wrapper .tabs li a {
@@ -260,6 +262,17 @@ main-search[loading] .tabs-content__wrapper {
           max-width: 100%;
       }
   }
+  .card-product__vendor {
+    color: var(--text-post-color-search-terms);
+  }
+  .card-product__title {
+    a {
+      color: var(--title-post-color-search-terms);
+      &:hover {
+        color: var(--link-post-color-search-terms);
+      }
+    }
+  }
 }
 
 .template-main-search-tabs__list {
@@ -273,23 +286,102 @@ main-search[loading] .tabs-content__wrapper {
   @media screen and (min-width: 991px){
     margin: 0 -1.5rem -3rem;
   }
-  &.columns--4 {
-    .template-main-search-tabs__item {
-        max-width: 25%;
-        width: 100%;
+}
+
+.columns--5 {
+  .template-main-search-tabs__item {
+    max-width: 20%;
+    width: 100%;
+    @media (min-width: 991px) and (max-width: 1199px){
+      min-width: 25%;
+      flex: auto;
+      max-width: inherit;
+      width: min-content;
+    }
+    @media (min-width: 768px) and (max-width: 990px){
+      min-width: 33.33%;
+      flex: auto;
+      max-width: inherit;
+      width: min-content;
+    }
+    @media (min-width: 471px) and (max-width: 767px){
+      min-width: 50%;
+      flex: auto;
+      max-width: inherit;
+      width: min-content;
+    }
+    @media (min-width: 320px) and (max-width: 470px){
+      min-width: 50%;
+      flex: auto;
+      max-width: inherit;
+      width: min-content;
     }
   }
-  &.columns--3 {
-    .template-main-search-tabs__item {
-        max-width: 33.33%;
-        width: 100%;
-    }
+}
+.columns--4 {
+  .template-main-search-tabs__item {
+      max-width: 25%;
+      width: 100%;
+      @media (min-width: 768px) and (max-width: 990px){
+        min-width: 50%;
+        flex: auto;
+        max-width: inherit;
+        width: min-content;
+      }
+      @media (min-width: 471px) and (max-width: 767px){
+        min-width: 50%;
+        flex: auto;
+        max-width: inherit;
+        width: min-content;
+      }
+      @media (min-width: 320px) and (max-width: 470px){
+        min-width: 100%;
+        flex: auto;
+        max-width: inherit;
+        width: min-content;
+      }
   }
-  &.columns--2 {
-    .template-main-search-tabs__item {
-        max-width: 50%;
-        width: 100%;
-    }
+}
+.columns--3 {
+  .template-main-search-tabs__item {
+      max-width: 33.33%;
+      width: 100%;
+      @media (min-width: 991px) and (max-width: 1199px){
+        min-width: 33.33%;
+        flex: auto;
+        max-width: inherit;
+        width: min-content;
+      }
+      @media (min-width: 768px) and (max-width: 990px){
+        min-width: 50%;
+        flex: auto;
+        max-width: inherit;
+        width: min-content;
+      }
+      @media (min-width: 471px) and (max-width: 767px){
+        min-width: 50%;
+        flex: auto;
+        max-width: inherit;
+        width: min-content;
+      }
+      @media (min-width: 320px) and (max-width: 470px){
+        min-width: 100%;
+        flex: auto;
+        max-width: inherit;
+        width: min-content;
+      }
+  }
+}
+.columns--2 {
+  .template-main-search-tabs__item {
+      max-width: 50%;
+      width: 100%;
+      @media (min-width: 320px) and (max-width: 470px){
+        min-width: 100%;
+        flex: auto;
+        max-width: inherit;
+        width: min-content;
+      }
   }
 }
 
@@ -300,6 +392,85 @@ main-search[loading] .tabs-content__wrapper {
   }
 }
 
-@media screen and (max-width: 480px) {
+.main-search__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  @media screen and (max-width: 990px) {
+    display: block;
+    text-align: center;
+  }
+  .pagination-wrapper {
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2;
+    margin-left: auto;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+  }
+  .main-search__product-count{
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
+    margin-bottom: 0;
+    padding-right: 30px;
+    @media screen and (max-width: 990px) {
+      padding-right: 0;
+      margin-bottom: 3rem;
+      margin-top: 3rem;
+    }
+  }
+  .main-search__load-more-button {
+    order: 2;
+    margin-left: auto;
+  }
+}
 
+.grid__item--no {
+  margin: auto;
+  text-align: center;
+  width: auto;
+  padding-bottom: 3rem;
+  .title {
+    margin-bottom: 0;
+  }
+}
+
+.template-main-search-page__title {
+  margin-bottom: 1.8rem;
+  text-transform: none;
+  color: var(--title-page-color-search-terms);
+}
+
+.template-main-search-page__link {
+  color: var(--link-page-color-search-terms)!important;
+  padding: 0;
+  text-underline-offset: 3px;
+  background: none !important;
+  font-weight: 700;
+  border: none;
+  margin: 2rem;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.template-main-search-page__content {
+  position: relative;
+  text-align: center;
+  background-color: var(--background-page-color-search-terms);
+  padding: 30px;
+  svg {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+.template-main-search-page__box {
+  border:1px solid var(--color-input)
 }
